<?xml version="1.0" encoding="utf-8"?>
<resources>

    <color name="listcolor">#FFE87C</color>
    <color name="black">#000000</color>
    <color name="errorous">#FFAAAA</color>
    <color name="income">#00BB00</color>
    <color name="outcome">#BB0000</color>
    <color name="account_comment">#BBBBBB</color>
    <color name="summary_header">#d5e5ff</color>

    <string name="app_name">MoneyTracker</string>

    <!--  old shit -->
    <string name="hello_world">Hello world!</string>
    <string name="hello">Hello World, Todo!</string>
    <string name="no_todos">Currently there are no Todo items maintained</string>
    <string name="menu_insert">Add Item</string>
    <string name="menu_delete">Delete Todo</string>
    <string name="todo_summary">Summary</string>
    <string name="todo_description">Delete Todo</string>
    <string name="todo_edit_summary">Summary</string>
    <string name="todo_edit_description">Description</string>
    <string name="todo_edit_confirm">Confirm</string>


    <!-- Main menu buttons -->
    <string name="status">Summary</string>
    <string name="accounts">Accounts</string>
    <string name="events_and_tasks">Events and Tasks</string>
    <string name="debts">Debts</string>
    <string name="accumumations">Accumulations</string>
    <string name="budget">Budget</string>

    <!--  Settings activity -->
    <string name="pref_sync">Allow negative balace</string>
    <string name="pref_sync_summ">allow to have negative balance on accounts</string>

    <!--  Main context menu -->
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="action_about">About</string>

    <!-- Accounts list activity -->
    <string name="account_new">New</string>
    <string name="account_delete">Delete</string>
    <string name="account_edit">Edit</string>
    <string name="sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="empty_account_list">You have no accounts\n create one with new button</string>
    
    <!-- New transaction activity  -->
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="amount">Amount</string>
    <string name="new_trans_desc">Enter comment or description</string>
    <string name="new_trans">New transaction</string>
    <string name="new_trans_no_account">Please create at least one account first</string>
    <string name="new_trans_no_category">Please create at least one transaction category first</string>
    <string name="error">Error</string>
    <string name="myself">Myself</string>
    <string name="member">Member</string>
    <string name="member_new">New member...</string>
    
    <!-- New account activity  -->
    <string name="type">Account type</string>
    <string name="currency">Currency</string>
    <string name="comment">Comment</string>
    <string name="new_curr">New currency...</string>
    
    <string name="income">Income</string>
    <string name="outcome">Outcome</string>

    <!--  Money account types -->
    <string name="type_cash">Cash</string>
    <string name="type_cards">Cards</string>
    <string name="type_bank_accounts">Accounts</string>
    <string name="account_name">Name</string>

    <!-- Summary activity menu -->
    <string name="new_transaction">New transaction</string>
    <string name="new_category_income">New income category</string>
    <string name="new_category_outcome">New outcome category</string>
    <string name="change_currency">Change currency</string>
    <string name="empty_trans_list">You have no transactios,\n create some using "New transaction"</string>
    
    <!-- Debts activity -->
    <string name="new_debt_income">Give in debt</string>
    <string name="new_debt_outcome">Take in debt</string>
    <string name="accepted">Resolve debt</string>
    <string name="empty_debts_list">You have no debts,\n create some using "New debt"</string>
    <string name="i_owe">I owe</string>
    <string name="i_am_owed">I am owed</string>
    <string name="relevant_currency">Relevant</string>

    <!-- New Debt activity -->
    <string name="recieved_in_debt">Got money in debt</string>
    <string name="sent_in_debt">Sent money debt</string>
    <string name="i_returned_debt">I paid my debt</string>
    <string name="they_returned_debt">Money were retuned</string>
    
    <!-- Default categories -->
    <string name="category_salary">Salary</string>
    <string name="category_interests">Deposit interests</string>
    <string name="category_food">Foodstuff</string>
    <string name="category_services">Services</string>
    <string name="category_car">Car</string>
    <string name="category_debts_income">Income debts</string>
    <string name="category_debts_outcome">Outcome debts</string>

    <!-- Transaction list activity -->
    <string name="trans_delete">Delete</string>
    <string name="desc">Description</string>
    <string name="account">Account</string>
    <string name="debt_description">Debt description</string>
    <string name="amount_to_pay">To pay</string>
    <string name="expired">Expired</string>
    <string name="ago">ago</string>
    <string name="left">days left</string>
    <string name="allow_manual_debts_categories">Allow manual debts categories</string>
    <string name="when_enabled_you_can_manually_create_debts_transactions">When enabled you can manually create debts transactions</string>
    <string name="set_interval">Set interval</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="pick_a_date_slice">Pick a date slice</string>
    <string name="exchange">Exchange</string>
    <string name="account_exchange_too_few_accounts">Please create at least two accounts</string>
    <string name="new_buget">New buget</string>
    <string name="add_buget">Add buget</string>
    <string name="buget_add">Buget add</string>
    <string name="delete_buget">Delete buget</string>
    <string name="buget_name">Buget name</string>
    <string name="buget_list_ampty">Your buget list is empty,\nadd new with \'Add Buget\' button</string>
    <string name="monthly">Monthly</string>
    <string name="weekly">Weekly</string>
    <string name="members_list">Members list</string>
    <string name="currency_list">Currency list</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="delete_debt">Remove debt</string>
    <string name="at_least_one_currency_is_mandatory">At least one currency is mandatory</string>
    <string name="member_delete">Delete</string>
    <string name="edit_amount">Edit amount</string>
    <string name="enter_new_amount">Enter new amount</string>
    <string name="nodesc">" no desc "</string>
    
    <!-- Accumulations -->
    <string name="accumulation_list_is_empty">Accumulation list is empty\n use "Add" button to add</string>
    <string name="add_accumulation">Add</string>
    <string name="accum_commit">Finish</string>
    <string name="accum_delete">Delete</string>
    <string name="accum_append">Add money</string>
    <string name="new_accum">New accumulation</string>
    <string name="cancelled_accumulation_">"cancelled accumulation : "</string>
    <string name="performed_accumulation_">"Performed accumulation : "</string>
    <string name="exchange_desc">exchange</string>
    
</resources>
