<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

    <item
        android:id="@+id/action_members_list"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/members_list"/>

    <item
        android:id="@+id/action_currency_list"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:title="@string/currency_list"/>

    <item
        android:id="@+id/action_exit"
        android:orderInCategory="103"
        android:showAsAction="never"
        android:title="@string/action_exit"/>

    <item
        android:id="@+id/action_about"
        android:orderInCategory="104"
        android:showAsAction="never"
        android:title="@string/action_about"/>
</menu>
