<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_tranaction_new"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/new_transaction"/>

    <item
        android:id="@+id/action_change_currency"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/change_currency"/>

    <item
        android:id="@+id/action_category_new_income"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:title="@string/new_category_income"/>

    <item
        android:id="@+id/action_category_new_outcome"
        android:orderInCategory="103"
        android:showAsAction="never"
        android:title="@string/new_category_outcome"/>
    
    <item
        android:id="@+id/action_set_interval"
        android:orderInCategory="104"
        android:showAsAction="never"
        android:title="@string/set_interval"/>
    

</menu>
