<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
<Spinner
    android:id="@+id/SpinnerAccountType"
    android:layout_height="wrap_content"
    android:prompt="@string/type"
    android:layout_width="fill_parent"
    android:entries="@array/account_types">
</Spinner>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/TextViewAccountName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/account_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/EditTextAmountStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" >

            <requestFocus />
        </EditText>

    </LinearLayout>

<Spinner
    android:id="@+id/SpinnerCurrency"
    android:layout_height="wrap_content"
    android:prompt="@string/currency"
    android:layout_width="fill_parent"
    >
</Spinner>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TextViewAccountComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/comment"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/EditTextAccountComment"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:ems="10"
            android:gravity="top|left"
            android:inputType="textMultiLine" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/ButtonCancelAddTransaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="CancelAccountAdd"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/ButtonCommitAddTransaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:onClick="CommitAccountAdd"
            android:text="@string/save" />
    </LinearLayout>

</LinearLayout>
