<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Spinner
            android:id="@+id/SpinnerBugetType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/buget_types"
            android:prompt="@string/type" >

        </Spinner>

        <Spinner
            android:id="@+id/SpinnerBugetCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/TextViewBugetName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/buget_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/EditTextBugetName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" >

            <requestFocus />
        </EditText>

    </LinearLayout>
    
    

<Spinner
    android:id="@+id/SpinnerBugetCurrency"
    android:layout_height="wrap_content"
    android:prompt="@string/currency"
    android:layout_width="fill_parent"
    >
</Spinner>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/TextViewBugetAmount"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="left|center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/amount"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/EditTextBugetAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="right|center_vertical"
            android:inputType="numberDecimal"
            android:text="0.0" />

        <TextView
            android:id="@+id/TextViewBugetCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:text="MLD"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/TextViewMember"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="left|center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/member"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <com.example.moneytracker.NDSpinner
            android:id="@+id/SpinnerBugetMember"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TextViewBugetComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/comment"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/EditTextBugetComment"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:ems="10"
            android:gravity="top|left"
            android:inputType="textMultiLine" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/ButtonCancelAddBuget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="CancelBugetAdd"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/ButtonCommitAddBuget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:onClick="CommitBugetAdd"
            android:text="@string/save" />
    </LinearLayout>

</LinearLayout>
